JSON support and multi-chat room support

--- a/apps/chat/templates/chat/chat.html
+++ b/apps/chat/templates/chat/chat.html
@@ -14,6 +14,7 @@
       <div id="chatbox" style="height: 20em; overflow:auto; border: 1px solid black"></div>
       <form id="chatform">
         <input type="hidden" name="nonce" value="{{ nonce }}">
+        <input type="hidden" name="room" value="{{ room }}">
         <input type="text" />
         <input type="submit" value="Send" />
       </form>
